--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-awesome-vis-app",
-  "version": "0.4.0",
+  "name": "INT×Power",
+  "version": "0.5.0",
   "private": false,
   "dependencies": {
     "@emotion/react": "^11.7.0",
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "publish": "aws --profile=private s3 sync ./build s3://gpower-plus-plus"
+    "publish": "aws --profile=intxpower s3 sync ./build s3://intxpower.com"
   },
   "eslintConfig": {
     "extends": [
